# QualityBoard

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md
.github/: CODEOWNERS
ai-failure-analyzer/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-failure-analyzer/ai_failure_analyzer/: __init__.py  main.py
ai-failure-analyzer/ai_failure_analyzer/api/: health.py
ai-failure-analyzer/ai_failure_analyzer/api/v1/: analyze.py
ai-failure-analyzer/ai_failure_analyzer/api/v1/schemas/: __init__.py  report.py  request.py
ai-failure-analyzer/ai_failure_analyzer/core/: config.py  security.py
ai-failure-analyzer/ai_failure_analyzer/services/: analyze_service.py  evidence_tools.py  observability.py  sse.py
ai-failure-analyzer/tests/: test_aifa_a1.py  test_b1_tools.py  test_b5_codehub.py
backend/: logging_config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
config/: module_repo_mapping.yaml.example  welink_card.ini.example
database/: README.md  V1.0.0__init_dt_infra_database.sql  V1.0.1__create_pipeline_history.sql  V1.0.2__create_pipeline_overview.sql  V1.0.3__create_pipeline_failure_reason.sql  V1.0.4__create_pipeline_cases.sql  V1.0.5__create_ums_email.sql  V1.0.6__create_ums_module_owner.sql  V1.0.7__create_case_failed_type.sql  V1.0.8__create_case_offline_type.sql  V1.0.9__create_sys_audit_log.sql  V1.1.0__create_report_snapshot.sql  V1.1.1__create_history_search_template.sql  V1.1.2__create_ut_gate_run.sql  seed_case_failed_type.sql  seed_pipeline_failure_reason.sql  (+4 more)
(+203 files in other folders)
