[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-failure-analyzer"
version = "0.1.0"
description = "AIFA — AI 辅助失败原因分析独立服务（Phase A1）"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "openai==1.57.4",
    "httpx==0.28.1",
    "selectolax==0.3.27",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_failure_analyzer*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
